# ComfyUI-NanoBanana_node

./: .env.template  .gitignore  README.md  __init__.py  chat_manager.py  manage_chats.py  node.py  pyproject.toml  requirements.txt
example_workflows/: Nano Banana Requests API Example Workflow.json
examples/: chat_mode_example.json
web/: nano_banana_dynamic_inputs.js
